# ft-gpt2

./: .gitignore  data.txt  main.py  pyproject.toml
